# tarea2

./: CMakeLists.txt  CoreNumeric.h  test_main.cpp  test_max.cpp  test_transform_reduce.cpp  test_variadic.cpp  test_variance.cpp
