cmake_minimum_required(VERSION 3.31)
project(tarea_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(tarea_2 main.cpp)
add_executable(test test.cpp)
add_executable(test_main test_main.cpp)
add_executable(test_variance test_variance.cpp)
add_executable(test_max test_max.cpp)
add_executable(test_transform_reduce test_transform_reduce.cpp)
add_executable(test_variadic test_variadic.cpp)
